Implement checker as annotation processor (#22)